# LEDSnap-Reimagined-

./: README.md
.github/workflows/: build.yml
core/: CMakeLists.txt
core/include/: ls_animation.h  ls_compositor.h  ls_frame_limiter.h  ls_lsnap.h  ls_text.h  ls_tools.h  ls_types.h
core/src/: ls_animation.c  ls_compositor.c  ls_frame_limiter.c  ls_lsnap.c  ls_text.c  ls_tools.c
core/tests/: test_compositor.c
ios/: project.yml
ios/LEDSnap/: Info.plist  LEDSnap-Bridging-Header.h
ios/LEDSnap/App/: LEDSnapApp.swift
ios/LEDSnap/Engine/: CoreBridge.swift  ProjectManager.swift
ios/LEDSnap/Views/: BannerView.swift  CanvasView.swift  ToolbarView.swift
pc/: CMakeLists.txt
pc/src/: main.c  receiver.c  receiver.h  renderer.c  renderer.h
